log/build_2025-01-13_02-04-53/my_first_package/stderr.log
  File "/home/ian/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_multi_thread.py", line 6
    from my_first_pakcage.my_subscriber improt TurtlesimSubscriber
                                        ^^^^^^
SyntaxError: invalid syntax

